# Ezek-s-Translator

./: README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: MODELS.txt  app_info.md
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/lang_detect/: CMakeLists.txt
app/src/main/cpp/lang_detect/src/: lang_detect.cpp  lang_detect.hpp
app/src/main/cpp/translator/: CMakeLists.txt
app/src/main/cpp/translator/src/: translator.cpp  translator.hpp  translator_jni.cpp  translator_jni.hpp
app/src/main/java/com/ezeksapps/ezeksapp/: EzeksApp.kt  MainActivity.kt  TODOLIST.txt
app/src/main/java/com/ezeksapps/ezeksapp/appinfo/: AppInfoScreen.kt
app/src/main/java/com/ezeksapps/ezeksapp/bergamot/: TranslationEngine.kt
app/src/main/java/com/ezeksapps/ezeksapp/camera/: CameraScreen.kt  CameraViewModel.kt
app/src/main/java/com/ezeksapps/ezeksapp/config/: ConfigManager.kt  DownloadConfig.kt
app/src/main/java/com/ezeksapps/ezeksapp/data/: DataStoreManager.kt
app/src/main/java/com/ezeksapps/ezeksapp/di/: DataStoreModule.kt  LangManagerModule.kt  NetworkModule.kt  UtilsModule.kt
app/src/main/java/com/ezeksapps/ezeksapp/home/: HomeScreen.kt
app/src/main/java/com/ezeksapps/ezeksapp/jni/: LangDetectJNI.kt  TranslatorJNI.kt
app/src/main/java/com/ezeksapps/ezeksapp/langmanager/: LangManager.kt  LangManagerViewModel.kt
app/src/main/res/drawable/: camera.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: provider_paths.xml
(+20 files in other folders)
